fix WIP image size and animation on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway");
-@import url("https://fonts.cdnfonts.com/css/technology?styles=26651");
-@import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.cdnfonts.com/css/technology?styles=26651');
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
 /* Arbitrary colors :  */
 
@@ -19,7 +19,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Share Tech Mono", monospace;
+  font-family: 'Share Tech Mono', monospace;
   text-decoration: none;
   list-style: none;
 }
@@ -34,7 +34,7 @@ body {
   color: #fff;
   margin: 0;
   height: 100vh;
-  font-family: "Share Tech Mono", monospace;
+  font-family: 'Share Tech Mono', monospace;
   overflow-x: hidden;
 }
 .profile-container {
@@ -75,7 +75,7 @@ body {
   -webkit-backdrop-filter: blur(6px);
   border: 1px 0 solid rgba(255, 255, 255, 0.18);
   z-index: 1;
-  font-family: "Share Tech Mono", monospace;
+  font-family: 'Share Tech Mono', monospace;
 }
 
 nav {
@@ -90,7 +90,7 @@ nav {
   font-size: 24px;
   font-weight: bold;
   color: rgb(239, 239, 239);
-  font-family: "Share Tech Mono", monospace;
+  font-family: 'Share Tech Mono', monospace;
 }
 
 .logo a span {
@@ -108,7 +108,7 @@ nav {
   padding: 7px 15px;
   font-size: 17px;
   font-weight: 500;
-  font-family: "Share Tech Mono", monospace;
+  font-family: 'Share Tech Mono', monospace;
   transition: 0.2s all ease-in-out;
   color: rgb(255, 255, 255);
 }
@@ -172,13 +172,13 @@ nav {
 /* hero styles */
 .hero-text {
   display: flex;
-  font-family: "Share Tech Mono", monospace;
+  font-family: 'Share Tech Mono', monospace;
   flex-direction: column;
   justify-content: center;
   margin-top: 50px;
 }
 .hero-text p {
-  font-family: "Share Tech Mono", monospace;
+  font-family: 'Share Tech Mono', monospace;
   text-align: center;
   font-size: 20px;
 }
@@ -223,11 +223,11 @@ footer {
   width: 100%;
 }
 .footer p {
-  font-family: "Share Tech Mono", monospace;
+  font-family: 'Share Tech Mono', monospace;
 }
 .footer a {
   color: #fff;
-  font-family: "Share Tech Mono", monospace;
+  font-family: 'Share Tech Mono', monospace;
 }
 .heading h1 {
   font-size: 50px;
@@ -340,9 +340,22 @@ footer {
   right: 2px;
   width: 50px;
   height: 50px;
+  max-width: 50px;
+  max-height: 50px;
 }
 
 @media (max-width: 768px) {
+  .wip-img {
+    user-select: none;
+    display: flex;
+    position: fixed;
+    top: 2px;
+    right: 15px;
+    width: 20px;
+    height: 35px;
+    max-width: 50px;
+    max-height: 50px;
+  }
   .skill-map {
     margin: 10px;
     margin-top: 50px;
@@ -439,14 +452,14 @@ form > textarea {
   resize: none;
 }
 
-form > input[type="submit"] {
+form > input[type='submit'] {
   padding-left: 1%;
   padding-right: 1%;
   cursor: pointer;
   transition: 0.35s;
 }
 
-form > input[type="submit"]:hover {
+form > input[type='submit']:hover {
   background-color: #0a17c7;
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 }
